--- a/src/app/upload-pdf/upload-pdf.component.html
+++ b/src/app/upload-pdf/upload-pdf.component.html
@@ -33,7 +33,7 @@
       </div>
       <div class="row mt-3">
         <div class="col-12">
-          <p>File data is used locally and never leaves your browser</p>
+          <p>Import data from your resume</p>
         </div>
       </div>
     </div>
