--- a/src/app/upload-pdf/upload-pdf.component.html
+++ b/src/app/upload-pdf/upload-pdf.component.html
@@ -16,17 +16,15 @@
       </div>
       <div *ngIf="selectedFile">
         <div class="row align-items-center">
-          <div class="col-8">
-            <div class="m-0 p-0">{{ selectedFile.name }}</div>
-          </div>
-          <div class="col-4 d-flex justify-content-end">
-            <button type="button" class="btn-close cross p-0 m-0" aria-label="Close" (click)="discardFile()">X</button>
+          <div class="col-12">
+            {{ selectedFile.name }}
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="discardFile()"></button>
           </div>
         </div>
       </div>
       <div class="row mt-3">
         <div class="col-12 d-flex justify-content-center">
-          <button class="btn btn-success" [disabled]="!selectedFile" (click)="upload() ">
+          <button class="btn btn-primary" [disabled]="!selectedFile" (click)="upload() ">
             Submit
           </button>
         </div>
