--- a/src/app/upload-pdf/upload-pdf.component.html
+++ b/src/app/upload-pdf/upload-pdf.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 half-width">
+<div class="container mt-5 restrict-width-60">
   <div class="row mt-3 mb-3">
       <h5 class="center gray-color">Import resume to get started</h5>
   </div>
@@ -9,7 +9,7 @@
           <div class="col-12">
             <label>
               <input id="pdf-upload" type="file" (change)="onFileSelected($event)">
-              <img class="upload-icon" src="assets/upload.png" alt="Attach a file here">
+              <img class="upload-icon pointer" src="assets/upload.png" alt="Attach a file here">
             </label>
           </div>
           <div class="col-12">
@@ -20,8 +20,13 @@
       <div *ngIf="selectedFile">
         <div class="row">
           <div class="col-12">
-            {{ selectedFile.name }}
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="discardFile()"></button>
+            <img class="upload-icon" src="assets/pdf.png" alt="Attach a file here">
+          </div>
+          <div class="col-12">
+            <span class="inline">
+              <p>{{ selectedFile.name }}</p>
+              <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="Close" (click)="discardFile()"></button>
+            </span>
           </div>
         </div>
       </div>
