--- a/src/app/upload-pdf/upload-pdf.component.html
+++ b/src/app/upload-pdf/upload-pdf.component.html
@@ -5,7 +5,7 @@
   <div class="row card dotted-border center" >
     <div class="card-body" >
       <div *ngIf="!selectedFile">
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-12">
             <label>
               <input id="pdf-upload" type="file" (change)="onFileSelected($event)">
@@ -25,12 +25,12 @@
           <div class="col-12">
             <span class="inline">
               <p>{{ selectedFile.name }}</p>
-              <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="Close" (click)="discardFile()"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="discardFile()"></button>
             </span>
           </div>
         </div>
       </div>
-      <div class="row mt-3">
+      <div class="row mt-5 mb-3">
         <div class="col-12 d-flex justify-content-center">
           <button class="btn btn-primary" [disabled]="!selectedFile" (click)="upload() ">
             Submit
