--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse me-5" id="navbarNav">
-      <ul class="navbar-nav move-left">
+      <ul class="navbar-nav move-right">
         <li class="nav-item nav-item-bg me-5">
           <a class="nav-link" href="#">Get Started</a>
         </li>
