--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+
+
 .gray-color {
   color: #505050;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
